--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "bluora/laravel-php-elixir-revision",
-    "description": "Provides the revision functionality.",
+    "description": "Provides the revision functionality to Laravel PHP-Elixir",
     "keywords": ["laravel", "php", "elixir", "revision"],
     "license": "MIT",
     "authors": [
@@ -10,7 +10,8 @@
         }
     ],
     "require": {
-        "bluora/laravel-php-elixir": "~3.0"
+        "bluora/laravel-php-elixir": "~3.0",
+        "matthiasmullie/minify": "~1.3.0"
     },
     "require-dev": {
         "phpunit/phpunit": "5.*",
